--- a/res/layout/contact_card.xml
+++ b/res/layout/contact_card.xml
@@ -6,12 +6,13 @@
     android:scrollbarAlwaysDrawVerticalTrack="true"
     android:scrollbarStyle="outsideInset"
     android:scrollbars="vertical" >
-
+
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:padding="10dp" >
 
         <LinearLayout
             android:id="@+id/linearLayout1"
@@ -160,7 +161,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
-            android:orientation="vertical" >
+            android:orientation="vertical"
+            android:paddingBottom="5dp" >
         </LinearLayout>
 
         <TextView
@@ -175,7 +177,8 @@
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:layout_weight="0.5"
-            android:orientation="vertical" >
+            android:orientation="vertical"
+            android:paddingBottom="5dp" >
         </LinearLayout>
 
         <TextView
@@ -190,7 +193,8 @@
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:layout_weight="0.5"
-            android:orientation="vertical" >
+            android:orientation="vertical"
+            android:paddingBottom="5dp" >
         </LinearLayout>
     </LinearLayout>
 
